@@ -37,6 +37,10 @@ API Changes:
     which extends from `com.twitter.util.Base64StringEncoder`. Both the url-safe
     and non-url-safe encoders can decode all strings generated by either. ``RB_ID=765189``
 
+  * util-core: Remove unnecesary `invalidate` method from util-cache's
+    `com.twitter.cache.guava.LoadingFutureCache`, and change the `remove` semantic
+    to match the `com.twitter.cache.FutureCache` contract. ``RB_ID=766988``
+
 6.29.0  2015-10-15
 
 New Features:
